--- a/Development/KqlParser/mAdcOW.SharePoint.KqlParser.csproj
+++ b/Development/KqlParser/mAdcOW.SharePoint.KqlParser.csproj
@@ -42,7 +42,7 @@
     <StartupObject />
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
