Added support for FQL based scopes.

--- a/Development/SearchParts/mAdcOW.SharePoint.SearchParts.csproj
+++ b/Development/SearchParts/mAdcOW.SharePoint.SearchParts.csproj
@@ -73,6 +73,7 @@
     <Compile Include="CoreFqlResultsDataSourceView.cs" />
     <Compile Include="DynamicReflectionHelperForObject.cs" />
     <Compile Include="CoreResultsFQLWebPart\FqlCoreResults.cs" />
+    <Compile Include="FASTScopeReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FASTSynonymReader.cs" />
   </ItemGroup>
