Added query param for setting trim

--- a/2013/mAdcOW.SearchSuggestions/mAdcOW.SearchSuggestions.csproj
+++ b/2013/mAdcOW.SearchSuggestions/mAdcOW.SearchSuggestions.csproj
@@ -89,6 +89,7 @@
     </None>
     <None Include="Package\Package.Template.xml">
       <DependentUpon>Package.package</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup />
