--- a/Development/SearchParts/mAdcOW.SharePoint.SearchParts.csproj
+++ b/Development/SearchParts/mAdcOW.SharePoint.SearchParts.csproj
@@ -90,6 +90,7 @@
     <Compile Include="HighConfidencePartialMatchWebPart\HighConfidenceResultsDataSourceView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FASTSynonymReader.cs" />
+    <Compile Include="RefinementPanelValueMappingSupport\RefinementPanelValueMappingSupport.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Features\FQLEnabledFeature\FQLEnabledFeature.feature">
@@ -112,6 +113,10 @@
       <DependentUpon>Package.package</DependentUpon>
       <SubType>Designer</SubType>
     </None>
+    <None Include="RefinementPanelValueMappingSupport\RefinementPanelValueMappingSupport.webpart" />
+    <None Include="RefinementPanelValueMappingSupport\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{64849be0-1815-4c93-ad69-eb484b4cd202}</SharePointProjectItemId>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
@@ -122,6 +127,7 @@
     </Content>
     <Content Include="CoreResultsFQLWebPart\Elements.xml" />
     <Content Include="HighConfidencePartialMatchWebPart\Elements.xml" />
+    <Content Include="RefinementPanelValueMappingSupport\Elements.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KqlParser\mAdcOW.SharePoint.KqlParser.csproj">
